# combat_sentry_behavior

./: CMakeLists.txt  dependencies.repos  package.xml
behavior_trees/: bump_traverse.xml  dev_rm.xml  intra_team_match.xml  mid_term.xml  models.xml  nav2_goal_bind_delay_test.xml  rmuc_2026.xml  rmuc_2026_base_defense.xml  rmuc_2026_common.xml  rmuc_2026_goals.xml  rmuc_2026_initialize.xml  rmuc_2026_on_highland.xml  rmuc_2026_recovery.xml  rmuc_2026_under_highland.xml  rmul_2026.xml  rmul_2026_no_attack.xml  rmul_2026_no_event.xml  rmul_2026_planb.xml  test.xml
include/combat_sentry_behavior/: combat_sentry_behavior_client.hpp  combat_sentry_behavior_server.hpp  custom_types.hpp
launch/: combat_sentry_behavior_launch.py
params/: sentry_behavior.yaml
plugins/action/: calculate_attack_pose.cpp  mission_blackboard.cpp  projectile_refill.cpp  pub_bump_status.cpp  pub_chassis_status.cpp  pub_nav2_goal.cpp  pub_sentry_status.cpp  pub_target_mode.cpp  pub_twist.cpp  send_nav2_goal.cpp  wait_until_reached.cpp
plugins/condition/: check_field_event.cpp  check_sentry_info.cpp  check_target_in_region.cpp  is_attacked.cpp  is_base_hp_low.cpp  is_detect_enemy.cpp  is_game_status.cpp  is_goal_available.cpp  is_outpost_hp_low.cpp  is_rfid_detected.cpp  is_status_ok.cpp  wait_for_sentry_info_state.cpp  wait_for_target_lost_stable.cpp
plugins/control/: parallel_node.cpp  reactive_parallel_node.cpp  recovery_node.cpp
plugins/decorator/: rate_controller.cpp  tick_after_timeout_node.cpp
src/: combat_sentry_behavior_client.cpp  combat_sentry_behavior_server.cpp
(+29 files in other folders)
