<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combat_sentry_behavior</name>
  <version>0.0.0</version>
  <description>
    COMBAT behavior tree for sentry robot based on BehaviorTree.CPP.
  </description>

  <maintainer email="lijieliang@njust.edu.cn">Jieliang Li</maintainer>
  <license>Apache-2.0</license>
  <author email="lijieliang@njust.edu.cn">Jieliang Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>nav2_util</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_ros2</depend>
  <depend>combat_rm_interfaces</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>

